# wikitextprocessor

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  extract_language_codes.py  get_languages.py  get_namespaces.py  push-pypi  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint.yml  test.yml
src/wikitextprocessor/: __init__.py  common.py  core.py  dumpparser.py  interwiki.py  luaexec.py  node_expand.py  parser.py  parserfns.py  wikidata.py  wikihtml.py
src/wikitextprocessor/lua/: _sandbox_phase1.lua  _sandbox_phase2.lua  mw.lua  mw.wikibase.entity.lua  mw_ext.lua  mw_html.lua  mw_language.lua  mw_site.lua  mw_title.lua  mw_uri.lua  mw_wikibase.lua
tests/: test_dumpparser.py  test_long.py  test_lua.py  test_node_expand.py  test_parser.py  test_parserfns.py  test_wikinode.py  test_wikiprocess.py  test_wikitext.py  testcov.conf
tools/: dump_locale_data.py  get_namespaces.py
typestubs/lupa/: __init__.pyi  lua51.pyi
wikitextprocessor/: __init__.py  common.py  context.py  core.py  db_models.py  dumpparser.py  languages.py  luaexec.py  node_expand.py  parser.py  parserfns.py  wikihtml.py  wikiparserfns.py  wikiprocess.py  wikitext.py
wikitextprocessor/data/ab/: namespaces.json
wikitextprocessor/data/ace/: namespaces.json
wikitextprocessor/data/af/: namespaces.json
wikitextprocessor/data/ak/: namespaces.json
wikitextprocessor/data/als/: namespaces.json
wikitextprocessor/data/am/: namespaces.json
wikitextprocessor/data/an/: namespaces.json
wikitextprocessor/data/ang/: namespaces.json
wikitextprocessor/data/ar/: namespaces.json
wikitextprocessor/data/arc/: namespaces.json
wikitextprocessor/data/arz/: namespaces.json
wikitextprocessor/data/as/: namespaces.json
wikitextprocessor/data/ast/: namespaces.json
wikitextprocessor/data/av/: namespaces.json
wikitextprocessor/data/ay/: namespaces.json
wikitextprocessor/data/az/: namespaces.json
wikitextprocessor/data/ba/: namespaces.json
wikitextprocessor/data/bat-smg/: namespaces.json
wikitextprocessor/data/be/: namespaces.json
wikitextprocessor/data/be-x-old/: namespaces.json
wikitextprocessor/data/bg/: namespaces.json
wikitextprocessor/data/bh/: namespaces.json
wikitextprocessor/data/bjn/: namespaces.json
wikitextprocessor/data/bm/: namespaces.json
wikitextprocessor/data/bn/: namespaces.json
wikitextprocessor/data/bpy/: namespaces.json
wikitextprocessor/data/br/: namespaces.json
wikitextprocessor/data/bs/: namespaces.json
wikitextprocessor/data/bxr/: namespaces.json
wikitextprocessor/data/ca/: namespaces.json
wikitextprocessor/data/cbs/: namespaces.json
wikitextprocessor/data/ce/: namespaces.json
wikitextprocessor/data/ceb/: namespaces.json
wikitextprocessor/data/ch/: namespaces.json
wikitextprocessor/data/ckb/: namespaces.json
wikitextprocessor/data/crh/: namespaces.json
wikitextprocessor/data/cs/: namespaces.json
wikitextprocessor/data/csb/: namespaces.json
wikitextprocessor/data/cu/: namespaces.json
wikitextprocessor/data/cv/: namespaces.json
wikitextprocessor/data/cy/: namespaces.json
wikitextprocessor/data/da/: namespaces.json
wikitextprocessor/data/diq/: namespaces.json
wikitextprocessor/data/dsb/: namespaces.json
wikitextprocessor/data/dv/: namespaces.json
wikitextprocessor/data/el/: namespaces.json
wikitextprocessor/data/en/: namespace_aliases.json  namespaces.json
wikitextprocessor/data/eo/: namespaces.json
wikitextprocessor/data/es/: namespaces.json
wikitextprocessor/data/eu/: namespaces.json
wikitextprocessor/data/ext/: namespaces.json
wikitextprocessor/data/fa/: namespaces.json
wikitextprocessor/data/fi/: namespaces.json
wikitextprocessor/data/fiu-vro/: namespaces.json
wikitextprocessor/data/fo/: namespaces.json
wikitextprocessor/data/frp/: namespaces.json
wikitextprocessor/data/fur/: namespaces.json
wikitextprocessor/data/fy/: namespaces.json
wikitextprocessor/data/ga/: namespaces.json
wikitextprocessor/data/gag/: namespaces.json
wikitextprocessor/data/gan/: namespaces.json
wikitextprocessor/data/gd/: namespaces.json
wikitextprocessor/data/gl/: namespaces.json
wikitextprocessor/data/glk/: namespaces.json
wikitextprocessor/data/gn/: namespaces.json
wikitextprocessor/data/got/: namespaces.json
wikitextprocessor/data/gu/: namespaces.json
wikitextprocessor/data/gv/: namespaces.json
wikitextprocessor/data/hak/: namespaces.json
wikitextprocessor/data/haw/: namespaces.json
wikitextprocessor/data/he/: namespaces.json
wikitextprocessor/data/hi/: namespaces.json
wikitextprocessor/data/hr/: namespaces.json
wikitextprocessor/data/hsb/: namespaces.json
wikitextprocessor/data/ht/: namespaces.json
wikitextprocessor/data/hu/: namespaces.json
wikitextprocessor/data/hy/: namespaces.json
wikitextprocessor/data/ia/: namespaces.json
wikitextprocessor/data/id/: namespaces.json
wikitextprocessor/data/ig/: namespaces.json
wikitextprocessor/data/ii/: namespaces.json
wikitextprocessor/data/ilo/: namespaces.json
wikitextprocessor/data/io/: namespaces.json
wikitextprocessor/data/is/: namespaces.json
wikitextprocessor/data/iu/: namespaces.json
wikitextprocessor/data/ja/: namespaces.json
wikitextprocessor/data/ka/: namespaces.json
wikitextprocessor/data/kaa/: namespaces.json
wikitextprocessor/data/kab/: namespaces.json
wikitextprocessor/data/kbd/: namespaces.json
wikitextprocessor/data/kg/: namespaces.json
wikitextprocessor/data/kk/: namespaces.json
wikitextprocessor/data/kl/: namespaces.json
wikitextprocessor/data/km/: namespaces.json
wikitextprocessor/data/kn/: namespaces.json
wikitextprocessor/data/ko/: namespaces.json
wikitextprocessor/data/koi/: namespaces.json
wikitextprocessor/data/krc/: namespaces.json
wikitextprocessor/data/ks/: namespaces.json
wikitextprocessor/data/ksh/: namespaces.json
wikitextprocessor/lua/: _sandbox_phase1.lua  _sandbox_phase2.lua  mw.lua  mw_hash.lua  mw_html.lua  mw_language.lua  mw_message.lua  mw_site.lua  mw_text.lua  mw_title.lua  mw_uri.lua  mw_wikibase.lua  sandbox.lua
(+249 files in other folders)
