[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "wikitextprocessor"
version = "0.4.96"
description = "Parser and expander for Wikipedia, Wiktionary etc. dump files, with Lua execution support"
readme = "README.md"
license = {text = "MIT License"}
authors = [
    {name = "Tatu Ylonen", email = "ylo@clausal.com"},
]
keywords = [
    "data extraction",
    "dictionary",
    "lua",
    "scribunto",
    "wikipedia",
    "wikitext",
    "wiktionary",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.9"
dependencies = [
    "dateparser",
    "importlib_resources; python_version < '3.10'",
    "lupa @ git+https://github.com/scoder/lupa.git",
    "lxml",
    "mediawiki_langcodes",
    "psutil",
    "requests",
]

[project.optional-dependencies]
dev = [
    "coverage[toml]",
    "mypy",
    "ruff",
    "types-dateparser",
    "types-lxml",
    "types-psutil",
    "types-requests",
]

[project.urls]
homepage = "https://github.com/tatuylonen/wikitextprocessor"

[tool.setuptools]
zip-safe = false

[tool.setuptools.package-data]
wikitextprocessor = [
    "lua/*.lua",
    "lua/mediawiki-extensions-Scribunto/COPYING",
    "lua/mediawiki-extensions-Scribunto/includes/Engines/LuaCommon/lualib/*.lua",
    "lua/mediawiki-extensions-Scribunto/includes/Engines/LuaCommon/lualib/ustring/*.lua",
    "lua/mediawiki-extensions-Scribunto/includes/Engines/LuaCommon/lualib/luabit/*.lua",
    "data/*/*",
    "py.typed",
]

[tool.mypy]
mypy_path = "typestubs"
python_version = 3.9

[[tool.mypy.overrides]]
module = "importlib_resources.*"
ignore_missing_imports = true

[tool.coverage.run]
branch = true
omit = ["tests/*"]

[tool.ruff]
line-length = 80
select = [
    "E",  # pycodestyle error
    "F",  # Pyflakes
    "I",  # isort
    "W",  # pycodestyle warning
]

[tool.typos]
files.extend-exclude = [
    "src/wikitextprocessor/lua/mediawiki-extensions-Scribunto",
    "src/wikitextprocessor/data",
    "tests",
]
default.extend-ignore-identifiers-re = [
    "uupper",
]
